# ScrapyBook

./: .replit  README.md  main.py  pyproject.toml  reddit.py  req.txt  stderr.txt  text-query-tweets.csv  twitter.py
gogle/: scrapy.cfg
gogle/gogle/: items.py  middlewares.py  pipelines.py  settings.py
gogle/gogle/spiders/: gle.py
reuters/: 26204028.json  26204114.json  26204608.json  26204628.json  26212557.json  26213015.json  AAPL29.json  NFLX29.json  output.csv  scrapy.cfg
reuters/reuters/: items.py  middlewares.py  pipelines.py  settings.py
reuters/reuters/spiders/: rt.py
yahoo/: 26201843.json  26202252.json  26202327.json  26202357.json  26202936.json  26203127.json  26205113.json  26212403.json  26212714.json  26212815.json  26213015.json  27001424.json  AAPL29.json  IBM29.json  NFLX29.json  TSLA29.json  output.csv  scrapy.cfg
yahoo/yahoo/: items.py  middlewares.py  pipelines.py  settings.py
yahoo/yahoo/spiders/: yh.py
