[tool.poetry]
name = "shadowyprevailingbackticks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy3 = "^1.0.1"
selenium = "^3.141.0"
scrapy-selenium = "^0.0.7"
snscrape = "^0.4.3"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
