[tool.poetry]
name = "ScrapyBook"
version = "0.1.0"
description = ""
authors = ["Asim Ali <hi@asimali.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy3 = "^1.0.1"
selenium = "^3.141.0"
snscrape = "^0.4.3"
pandas = "^1.4.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
